# mcn-script-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  report.md
coze/code_nodes/: format_converter.py
docs/: eval-trigger-analysis.md  risk-check-findings.md  workflow.mermaid
feishu/: README.md  write_to_feishu.py
output/: README.md  final_script_catherine_xiaoxiong.json  final_script_catherine_xiaoxiong.md  final_script_couhuohuo.json  final_script_couhuohuo.md
prompts/: main_generation_v3.md  main_generation_v3_final.md  main_generation_v4_final.md
references/: README.md  sample_video_decode.md
skills/mcn-script-assistant/: README.md  SKILL.md  eval-results.json
skills/mcn-script-assistant/references/: blogger-catherine.md  blogger-couhuohuo.md  blogger-template.md  brief.md  forbidden_words.md  output_schema.json  output_schema.md
skills/mcn-script-assistant/scripts/: risk_check.py  run_pipeline.py  schemas.py  write_to_feishu.py
test-venv/: pyvenv.cfg
test-venv/Scripts/: activate  activate.bat
tests/: conftest.py  test_feishu.py  test_risk_check.py  test_schemas.py
